--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Jayant Goel | Jayant Goel Portfolio</title>
-    <meta name="DC.title" content="Jayant Goel | Jayant Goel Portfolio" />
+    <title>Jayant Goel | Jayant's Personal Portfolio</title>
+    <meta name="DC.title" content="Jayant Goel | Jayant's Personal Portfolio" />
     <meta name="description" content="Jayant Goel(JayantGoel001) - A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills." />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
