--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="manifest.json"/>
 
-    <title>Jayant Goel | Jayant Goel Portfolio</title>
-    <meta name="DC.title" content="Jayant Goel | Jayant Goel Portfolio" />
+    <title>Jayant Goel | Jayant's Personal Portfolio</title>
+    <meta name="DC.title" content="Jayant Goel | Jayant's Personal Portfolio" />
     <meta name="description" content="Jayant Goel(JayantGoel001) - A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills." />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
@@ -25,7 +25,7 @@
 
     <meta property="og:image:width" content="1062">
     <meta property="og:image:height" content="556">
-    <meta property="og:title" content="Jayant Goel | Jayant Goel Portfolio"/>
+    <meta property="og:title" content="Jayant Goel | Jayant's Personal Portfolio"/>
     <meta property="og:description" content="Jayant Goel(JayantGoel001) - A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills." />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
     <meta property="og:image" content="https://jayantgoel001.github.io/images/og-image.jpg"/>
@@ -35,7 +35,7 @@
 
     <meta property="fb:app_id" content="1145054172578219"/>
 
-    <meta name="twitter:title" content="Jayant Goel | Jayant Goel Portfolio" />
+    <meta name="twitter:title" content="Jayant Goel | Jayant's Personal Portfolio" />
     <meta name="twitter:description" content="Jayant Goel(JayantGoel001) - A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills."/>
     <meta name="twitter:site" content="@JayantGoel001">
     <meta name="twitter:image:src" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
