--- a/404.html
+++ b/404.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Jayant Goel | Jayant's Personal Portfolio</title>
-    <meta name="DC.title" content="Jayant Goel | Jayant's Personal Portfolio" />
-    <meta name="description" content="Jayant Goel(JayantGoel001) - A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills." />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="./favicon-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-    <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#242a35">
-
-    <meta name="msapplication-TileColor" content="#242a35">
-    <meta name="msapplication-TileImage" content="/images/mstile-144x144.png">
-
-    <link rel="stylesheet" href="css/fonts.min.css" type="text/css">
-    <link rel="stylesheet" href="css/404.min.css" type="text/css">
-</head>
-<body>
-    <div class="text">
-        <h1>404</h1>
-        <h2>Uh, Ohh</h2>
-        <h3>Sorry we can't find what you are looking for 'cuz its so dark in here</h3>
-    </div>
-    <div class="torch" onclick="location.href='https://jayantgoel001.github.io/';"></div>
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="js/404.min.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Jayant Goel | Jayant's Personal Portfolio</title><meta name="DC.title" content="Jayant Goel | Jayant's Personal Portfolio" /><meta name="description" content="Jayant Goel(JayantGoel001) - A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills." /><link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png"><link rel="icon" type="image/png" sizes="48x48" href="./favicon-48x48.png"><link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png"><link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#242a35"><meta name="msapplication-TileColor" content="#242a35"><meta name="msapplication-TileImage" content="/images/mstile-144x144.png"><link rel="stylesheet" href="css/fonts.min.css" type="text/css"><link rel="stylesheet" href="css/404.min.css" type="text/css"></head><body><div class="text"><h1>404</h1><h2>Uh, Ohh</h2><h3>Sorry we can't find what you are looking for 'cuz its so dark in here</h3></div><div class="torch" onclick="location.href='https://jayantgoel001.github.io/';"></div> <script src="js/jquery-3.5.1.min.js"></script> <script type="text/javascript" src="js/404.min.js"></script> </body></html>
