--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-10 mt-5">
                         <div class="home-title text-center">
-                            <h5 class="text-white-50 sub-title mb-3 font-weight-normal disable-select">Student</h5>
+                            <h5 class="wow fadeInDownBig text-white-50 sub-title mb-3 font-weight-normal disable-select" data-wow-duration="0.5s">Student</h5>
                             <h1 class="display-3">
                                         <span
                                                 class="element text-white disable-select"
                                                 data-elements="Jayant Goel, Data Science Enthusiast, Machine Learning Enthusiast, MEAN Stack Developer, Android Developer, Open Source Contributor"
                                         ></span>
                             </h1>
-                            <p class="text-light mx-auto para-desc disable-select">
+                            <p class="wow fadeIn text-light mx-auto para-desc disable-select">
                                 I am Third-year student pursuing a Bachelor of Technology in Computer Science Engineering from Jaypee Institute Of Information Technology, <br />
                                 Sector 62
                             </p>
@@ -120,7 +120,7 @@
     <div class="container">
         <div class="row justify-content-center txt-bg txt-bg-about">
             <div class="col-lg-6 pointer">
-                <div class="section-title text-center mb-4 pb-2">
+                <div class="wow fadeIn section-title text-center mb-4 pb-2">
                     <div class="mb-5 pb-3"><i class="fas fa-user-graduate h1 text-muted"></i></div>
                     <div class="h3 font-weight-bold">About me</div>
                     <p class="text-muted mx-auto mb-0 mt-4 para-desc">Experience, technologies and background.</p>
@@ -144,13 +144,13 @@
                     <div class="tab-pane fade show active" id="story" role="tabpanel" aria-labelledby="story-tab">
                         <div class="text-center">
                             <div class="about-img mt-5 mb-5"><img src="images/Profile-pic.webp" alt="Profile" class="img-fluid mx-auto d-block rounded-circle" height="400" width="400" loading="lazy" /></div>
-                            <div class="h3 font-weight-bold mb-3 wow slideInRight">Jayant Goel <small class="text-muted"> - Full Stack Web Developer, Android & Data Science Enthusiast </small></div>
-                            <p class="text-muted wow slideInLeft">
+                            <div class="h3 font-weight-bold mb-3 wow fadeIn">Jayant Goel <small class="text-muted"> - Full Stack Web Developer, Android & Data Science Enthusiast </small></div>
+                            <p class="text-muted wow bounceInUp">
                                 An Enthusiast Coder Eager to contribute to team success through hard work, skills, attention to details and excellent organizational skills. Currently Exploring the world of Technology as SDE Intern
                                 at Talent Decrypt and as a Third year student at Jaypee Institute Of Information Technology. <br />
                                 Formerly worked as Android Developer At Theatron for 8 months.
                             </p>
-                            <p class="text-muted wow slideInUp"><strong>IDE & Editors Used</strong> : Android Studio, Intellij, PyCharm , WebStorm, CLion, PHPStorm, Anaconda Navigator, Atom, Python 3.8, BlueJ, CodeBlocks</p>
+                            <p class="text-muted wow bounceInDown"><strong>IDE & Editors Used</strong> : Android Studio, Intellij, PyCharm , WebStorm, CLion, PHPStorm, Anaconda Navigator, Atom, Python 3.8, BlueJ, CodeBlocks</p>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="skill" role="tabpanel" aria-labelledby="skill-tab">
@@ -243,14 +243,14 @@
                                 <div id="education" class="education-section">
                                     <i class="fas fa-graduation-cap mt-5 font-size-50"></i>
                                     <div class="timeline mt-5">
-                                        <div class="timeline-box left">
+                                        <div class="wow bounceInRight timeline-box left" data-wow-delay="0s">
                                             <div class="timeline-container">
                                                 <h3 class="experience-designation m-0">Bachelor of Technology (B.Tech), Computer Science And Technology</h3>
                                                 <h4 class="experience-company-name">Jaypee Institute Of Information Technology, Noida Sector-62</h4>
                                                 <h5 class="experience-duration m-0">2018 - 2022</h5>
                                             </div>
                                         </div>
-                                        <div class="timeline-box right">
+                                        <div class="wow bounceInLeft timeline-box right" data-wow-delay="0s">
                                             <div class="timeline-container">
                                                 <h3 class="experience-designation m-0 text-left">XII (Senior Secondary), PCM with Computer Science</h3>
                                                 <h4 class="experience-company-name text-left">Holy Trinity Church School, Ghaziabad (ISC Board)</h4>
@@ -258,7 +258,7 @@
                                                 <p class="experience-description text-left">Percentage:91%</p>
                                             </div>
                                         </div>
-                                        <div class="timeline-box left">
+                                        <div class="wow bounceInRight timeline-box left" data-wow-delay="0s">
                                             <div class="timeline-container">
                                                 <h3 class="experience-designation m-0">X(Secondary)</h3>
                                                 <h4 class="experience-company-name">Holy Trinity Church School, Ghaziabad (ICSE Board)</h4>
@@ -286,10 +286,10 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-7 text-center fadeInUp">
-                <h2 class="disable-select">“Once a new technology rolls over you, if you're not part of the steamroller, you're part of the road.”</h2>
+                <h2 class="wow slideInLeft disable-select" data-wow-duration="0.25s" data-wow-delay="0.1s">“Once a new technology rolls over you, if you're not part of the steamroller, you're part of the road.”</h2>
                 <br />
                 <br />
-                <h2 class="font-italic disable-select">-Stewart Brand</h2>
+                <h2 class="wow slideInRight font-italic disable-select" data-wow-duration="0.25s" data-wow-delay="0.1s">-Stewart Brand</h2>
             </div>
         </div>
     </div>
@@ -298,7 +298,7 @@
     <div class="container">
         <div class="row justify-content-center txt-bg txt-bg-portfolio">
             <div class="col-lg-6">
-                <div class="section-title text-center mb-4 pb-2">
+                <div class="wow fadeIn section-title text-center mb-4 pb-2">
                     <div class="mb-5 pb-3"><i class="far fa-clone h1 text-muted"></i></div>
                     <div class="h3 font-weight-bold">My Portfolio</div>
                     <p class="text-muted mx-auto mb-0 mt-4 para-desc">Sample of some of my projects</p>
@@ -306,7 +306,7 @@
             </div>
         </div>
         <div class="row container-grid projects-wrapper mt-4 pt-2">
-            <div class="col-lg-4 spacing">
+            <div class="wow rotateInDownLeft col-lg-4 spacing" data-wow-delay="0.5s">
                 <div class="item-box m-2">
                     <a
                             rel="noreferrer"
@@ -330,7 +330,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4 spacing">
+            <div class="wow slideInUp col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a
                             rel="noreferrer"
@@ -352,7 +352,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4 spacing">
+            <div class="wow rotateInDownRight col-lg-4 spacing" data-wow-delay="0.5s">
                 <div class="item-box m-2">
                     <a
                             rel="noreferrer"
@@ -374,7 +374,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4 spacing">
+            <div class="wow rotateInUpLeft col-lg-4 spacing" data-wow-delay="0.5s">
                 <div class="item-box m-2">
                     <a
                             rel="noreferrer"
@@ -399,7 +399,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4 spacing">
+            <div class="wow slideInDown col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a
                             rel="noreferrer"
@@ -421,7 +421,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4 spacing">
+            <div class="wow rotateInUpRight col-lg-4 spacing" data-wow-delay="0.5s">
                 <div class="item-box m-2">
                     <a
                             rel="noreferrer"
@@ -476,7 +476,7 @@
         </div>
         <div class="row justify-content-center txt-bg txt-bg-training">
             <div class="col-lg-6">
-                <div class="section-title text-center mb-4 pb-2">
+                <div class="section-title text-center mb-4 pb-2 wow fadeIn">
                     <div class="mb-5 pb-3"><i class="fas fa-infinity h1 text-muted"></i></div>
                     <div class="h3 font-weight-bold" id="my-training">My Training</div>
                     <p class="text-muted mx-auto mb-0 mt-4 para-desc">Certifications and Work Profile</p>
@@ -672,7 +672,7 @@
     <div class="container z-index">
         <div class="row justify-content-center txt-bg txt-bg-achievement">
             <div class="col-lg-6">
-                <div class="section-title text-center mb-4 pb-2">
+                <div class="wow fadeIn section-title text-center mb-4 pb-2">
                     <div class="mb-5 pb-3"><i class="fas fa-trophy h1 text-muted"></i></div>
                     <div class="h3 font-weight-bold">My Achievements</div>
                     <p class="text-muted mx-auto mb-0 mt-4 para-desc">Some of my Accomplishment.</p>
@@ -680,15 +680,15 @@
             </div>
         </div>
         <div class="container-ach">
-            <div class="box col-lg-4">
+            <div class="box col-lg-4 wow zoomInLeft" data-wow-delay="0.5s">
                 <h2 class="name pl-1">6 ★ in Problem Solving with 3200+ points on HackerRank</h2>
                 <img src="images/HackerRank.webp" class="ach-img" alt="HackerRank" loading="lazy" />
             </div>
-            <div class="box col-lg-4">
+            <div class="box col-lg-4 wow zoomInUp" data-wow-delay="0.5s">
                 <h2 class="name pl-1">Won <strong>Hacktoberfest 2020</strong> T-shirt by creating more than <strong>20</strong> Pull Request.</h2>
                 <img src="images/hacktoberfest2020.webp" class="ach-img" alt="Hacktoberfest" loading="lazy" />
             </div>
-            <div class="box col-lg-4">
+            <div class="box col-lg-4 wow zoomInRight" data-wow-delay="0.5s">
                 <h2 class="name pl-1">Secured <strong>1st</strong> Position Among <strong>66 peers</strong> in Data Science Course.</h2>
                 <img src="images/data-science.webp" class="ach-img" alt="Data-Science" loading="lazy" />
             </div>
@@ -700,7 +700,7 @@
     <div class="container">
         <div class="row justify-content-center txt-bg txt-bg-contact">
             <div class="col-lg-6">
-                <div class="section-title text-center mb-4 pb-2">
+                <div class="section-title text-center mb-4 pb-2 wow fadeIn">
                     <div class="mb-5 pb-3"><i class="fas fa-headset h1"></i></div>
                     <h3 class="text-white">Contact me</h3>
                     <p class="text-white-50 mx-auto mb-0 mt-4 para-desc">Address, Phone Number and Email Address.</p>
@@ -708,7 +708,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-lg-3 col-md-4 mt-4 pt-2" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Location</em></strong>">
+            <div class="col-lg-3 col-md-4 mt-4 pt-2 wow slideInLeft" data-wow-delay="0.2s" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Location</em></strong>">
                 <div class="contact-desc text-center">
                     <div class="contact-icon mb-3"><i class="fas fa-street-view text-custom h3"></i></div>
                     <div class="contact-details">
@@ -716,7 +716,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 mt-4 pt-2" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Contact Number</em></strong>">
+            <div class="col-lg-3 col-md-4 mt-4 pt-2 wow slideInUp" data-wow-delay="0.2s" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Contact Number</em></strong>">
                 <div class="contact-desc text-center">
                     <div class="contact-icon mb-3"><i class="fas fa-mobile-alt text-custom h3"></i></div>
                     <div class="contact-details">
@@ -725,7 +725,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 mt-4 pt-2" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>E-Mail</em></strong>">
+            <div class="col-lg-3 col-md-4 mt-4 pt-2 wow slideInRight" data-wow-delay="0.2s" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>E-Mail</em></strong>">
                 <div class="contact-desc text-center">
                     <div class="contact-icon mb-3"><i class="far fa-envelope text-custom h3"></i></div>
                     <div class="contact-details">
@@ -737,7 +737,7 @@
     </div>
 </section>
 <footer class="footer bg-light">
-    <a rel="noreferrer" aria-label="dev-image" href="https://dev.to/jayantgoel001" target="_blank" class="crayons-footer__mascot" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>DEV</em></strong>">
+    <a rel="noreferrer" aria-label="dev-image" href="https://dev.to/jayantgoel001" target="_blank" class="crayons-footer__mascot wow slideInRight" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>DEV</em></strong>">
         <img alt="footer" width="52" height="120" src="images/monkey.webp" loading="lazy" />
     </a>
     <div class="container">
@@ -746,7 +746,7 @@
                 <div class="text-center mt-5 mb-5">
                     <br />
                     <ul class="social-icons mb-3 list-inline">
-                        <li class="list-inline-item">
+                        <li class="list-inline-item ">
                             <a rel="noreferrer" aria-label="image" href="https://github.com/JayantGoel001/" target="_blank" data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>GitHub</em></strong>">
                                 <i class="fab fa-github dark"></i>
                             </a>
@@ -810,7 +810,7 @@
             </div>
         </div>
     </div>
-    <p class="copyright-desc text-white mb-0 h6 mt-2">Designed with <i class="fas fa-heart text-danger"></i> By Jayant Goel</p>
+    <p class="wow fadeInUp copyright-desc text-white mb-0 h6 mt-2">Designed with <i class="fas fa-heart text-danger"></i> By Jayant Goel</p>
 </footer>
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
