--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
 <noscript>Our Website uses JavaScript. Please Enable it in Settings.</noscript>
 
 <app-root></app-root>
-
+<script src="assets/data.js"></script>
 <script defer src=assets/js/girl.min.js></script>
 <script src=assets/js/jquery-3.5.1.min.js></script>
 <script src=assets/js/bootstrap.bundle.min.js></script>
@@ -82,7 +82,7 @@
 <script src=assets/js/vanilla-tilt.min.js></script>
 <script src=assets/js/dark-light-theme.min.js></script>
 <script src=assets/js/wow.min.js></script>
-<script src=assets/js/app.min.js></script>
+<script src=assets/js/app.js></script>
 <script src=https://kit.fontawesome.com/25938f5d06.js crossorigin=anonymous></script>
 </body>
 
