--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,38 @@
 <!doctype html>
-<html lang=en>
+<html lang="en">
 <head>
-	<meta charset=UTF-8>
-	<meta name=theme-color content=#242a35>
-	<link rel=canonical href=https://jayantgoel001.github.io/>
-	<meta name=viewport content="width=device-width,initial-scale=1.0">
-	<link rel=manifest href="manifest.json">
+	<meta charset="UTF-8">
+	<base href="/">
+	<meta name="theme-color" content="#242a35">
+	<link rel="canonical" href="https://jayantgoel001.github.io/">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<link rel="manifest" href="manifest.json">
 	<title>Jayant Goel (JayantGoel001)'s Personal Portfolio</title>
-	<meta name=DC.title content="Jayant Goel (JayantGoel001)'s Personal Portfolio">
-	<meta name=description content="Jayant Goel (JayantGoel001) - A programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills.">
-	<link rel=apple-touch-icon sizes=180x180 href=apple-touch-icon.png>
-	<link rel=icon type=image/png sizes=48x48 href=favicon-48x48.png>
-	<link rel=icon type=image/png sizes=32x32 href=favicon-32x32.png>
-	<link rel=icon type=image/png sizes=16x16 href=favicon-16x16.png>
-	<link rel=mask-icon href=assets/images/safari-pinned-tab.svg color=#242a35>
-	<meta name=msapplication-TileColor content=#242a35>
-	<meta name=msapplication-TileImage content=/images/mstile-144x144.png>
-	<meta name=keyword content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001, Android, Web Development, Machine Learning, GitHub, Data Science, linkedIn">
-	<meta name=author content="Jayant Goel">
-	<meta property=og:image:width content=1062>
-	<meta property=og:image:height content=556>
-	<meta property=og:title content="Jayant Goel (JayantGoel001)'s Personal Portfolio">
-	<meta property=og:description content="Jayant Goel (JayantGoel001) - A programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills.">
-	<meta property=og:url content=https://jayantgoel001.github.io>
-	<meta property=og:image content=images/Profile-pic-512x512.png>
-	<meta property=og:type content=website>
-	<meta property=fb:app_id content=1145054172578219>
-	<meta name=twitter:title content="Jayant Goel (JayantGoel001)'s Personal Portfolio">
-	<meta name=twitter:description content="Jayant Goel (JayantGoel001) - A programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills.">
-	<meta name=twitter:site content=@JayantGoel001>
-	<meta name=twitter:image:src content=https://jayantgoel001.github.io/images/bgimg.webp>
-	<meta name=twitter:card content=summary_large_image>
-	<script type=application/ld+json>
+	<meta name="DC.title" content="Jayant Goel (JayantGoel001)'s Personal Portfolio">
+	<meta name="description" content="Jayant Goel (JayantGoel001) - A programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills.">
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="48x48" href="favicon-48x48.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="mask-icon" href="assets/images/safari-pinned-tab.svg" color="#242a35">
+	<meta name="msapplication-TileColor" content="#242a35">
+	<meta name="msapplication-TileImage" content="assets/images/mstile-144x144.png">
+	<meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001, Android, Web Development, Machine Learning, GitHub, Data Science, linkedIn">
+	<meta name="author" content="Jayant Goel">
+	<meta property="og:image:width" content="1062">
+	<meta property="og:image:height" content="556">
+	<meta property="og:title" content="Jayant Goel (JayantGoel001)'s Personal Portfolio">
+	<meta property="og:description" content="Jayant Goel (JayantGoel001) - A programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills.">
+	<meta property="og:url" content="https://jayantgoel001.github.io">
+	<meta property="og:image" content="assets/images/Profile-pic-512x512.png">
+	<meta property="og:type" content="website">
+	<meta property="fb:app_id" content="1145054172578219">
+	<meta name="twitter:title" content="Jayant Goel (JayantGoel001)'s Personal Portfolio">
+	<meta name="twitter:description" content="Jayant Goel (JayantGoel001) - A programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills.">
+	<meta name="twitter:site" content="@JayantGoel001">
+	<meta name="twitter:image:src" content="https://jayantgoel001.github.io/assets/images/bgimg.webp">
+	<meta name="twitter:card" content="summary_large_image">
+	<script type="application/ld+json">
 		{
 			"@type": "WebSite",
 			"headline": "Jayant Goel",
@@ -43,11 +44,10 @@
 			"@context": "https://schema.org"
 		}
 	</script>
-	<link rel=stylesheet href=assets/css/animate.min.css>
-	<link rel=stylesheet href=assets/css/fonts.min.css>
-	<link rel=stylesheet href=assets/css/styles.min.css>
+	<link rel="stylesheet" href="assets/css/animate.min.css">
+	<link rel="stylesheet" href="assets/css/fonts.min.css">
 	<link rel="preload" href="assets/css/girl.min.css" as="style">
-	<meta name=google-site-verification content=0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho>
+	<meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho">
 	<script>
 		! function(e, a, t, n, g, c) {
 			e.GoogleAnalyticsObject = n;
@@ -67,21 +67,21 @@
 </head>
 
 <body>
-<noscript>Our Website uses JavaScript. Please Enable it in Settings.</noscript>
+	<noscript>Our Website uses JavaScript. Please Enable it in Settings.</noscript>
 
-<app-root></app-root>
-<script src="assets/data.js"></script>
-<script defer src=assets/js/girl.min.js></script>
-<script src=assets/js/jquery-3.5.1.min.js></script>
-<script src=assets/js/bootstrap.bundle.min.js></script>
-<script src=assets/js/jquery.easing.min.js></script>
-<script src=assets/js/scrollspy.min.js></script>
-<script src=assets/js/particles.min.js></script>
-<script src=assets/js/vanilla-tilt.min.js></script>
-<script src=assets/js/dark-light-theme.min.js></script>
-<script src=assets/js/wow.min.js></script>
-<script src=assets/js/app.js></script>
-<script src=https://kit.fontawesome.com/25938f5d06.js crossorigin=anonymous></script>
+	<app-root></app-root>
+	<script src="assets/data.js"></script>
+	<script async defer src=assets/js/girl.min.js></script>
+	<script src=assets/js/jquery-3.5.1.min.js></script>
+	<script src=assets/js/bootstrap.bundle.min.js></script>
+	<script src=assets/js/jquery.easing.min.js></script>
+	<script src=assets/js/scrollspy.min.js></script>
+	<script src=assets/js/particles.min.js></script>
+	<script src=assets/js/vanilla-tilt.min.js></script>
+	<script src=assets/js/dark-light-theme.min.js></script>
+	<script src=assets/js/wow.min.js></script>
+	<script src=assets/js/app.js></script>
+	<script src="https://kit.fontawesome.com/25938f5d06.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
