--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,8 @@
 	<noscript>Our Website uses JavaScript. Please Enable it in Settings.</noscript>
 
 	<app-root></app-root>
-	<script src="assets/data.js"></script>
+
+	<script src="src/assets/data.min.js"></script>
 	<script async defer src=assets/js/girl.min.js></script>
 	<script src=assets/js/jquery-3.5.1.min.js></script>
 	<script src=assets/js/bootstrap.bundle.min.js></script>
