--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
 
 	<app-root></app-root>
 
-	<script src="src/assets/data.min.js"></script>
+	<script src="assets/data.min.js"></script>
 	<script async defer src=assets/js/girl.min.js></script>
 	<script src=assets/js/jquery-3.5.1.min.js></script>
 	<script src=assets/js/bootstrap.bundle.min.js></script>
