--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
 	<script src=assets/js/vanilla-tilt.min.js></script>
 	<script src=assets/js/dark-light-theme.min.js></script>
 	<script src=assets/js/wow.min.js></script>
-	<script src=assets/js/app.js></script>
+	<script src=assets/js/app.min.js></script>
 	<script src="https://kit.fontawesome.com/25938f5d06.js" crossorigin="anonymous"></script>
 </body>
 
