--- a/src/index.html
+++ b/src/index.html
@@ -72,16 +72,16 @@
 	<app-root></app-root>
 
 	<script src="assets/data.min.js"></script>
-	<script async defer src=assets/js/girl.min.js></script>
-	<script src=assets/js/jquery-3.5.1.min.js></script>
-	<script src=assets/js/bootstrap.bundle.min.js></script>
-	<script src=assets/js/jquery.easing.min.js></script>
-	<script src=assets/js/scrollspy.min.js></script>
-	<script src=assets/js/particles.min.js></script>
-	<script src=assets/js/vanilla-tilt.min.js></script>
-	<script src=assets/js/dark-light-theme.min.js></script>
-	<script src=assets/js/wow.min.js></script>
-	<script src=assets/js/app.min.js></script>
+	<script async defer src="assets/js/girl.min.js"></script>
+	<script src="assets/js/jquery-3.5.1.min.js"></script>
+	<script src="assets/js/bootstrap.bundle.min.js"></script>
+	<script src="assets/js/jquery.easing.min.js"></script>
+	<script src="assets/js/scrollspy.min.js"></script>
+	<script src="assets/js/particles.min.js"></script>
+	<script src="assets/js/vanilla-tilt.min.js"></script>
+	<script src="assets/js/dark-light-theme.min.js"></script>
+	<script src="assets/js/wow.min.js"></script>
+	<script src="assets/js/app.min.js"></script>
 	<script src="https://kit.fontawesome.com/25938f5d06.js" crossorigin="anonymous"></script>
 </body>
 
