--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
 	<meta property="og:image:height" content="556">
 	<meta property="og:title" content="Jayant Goel (JayantGoel001)'s Personal Portfolio">
 	<meta property="og:description" content="Jayant Goel (JayantGoel001) - A programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills.">
-	<meta property="og:url" content="https://jayantgoel001.github.io">
-	<meta property="og:image" content="assets/images/Profile-pic-512x512.png">
+	<meta property="og:url" content="https://jayantgoel001.github.io/">
+	<meta property="og:image" content="/assets/images/Profile-pic-512x512.png">
 	<meta property="og:type" content="website">
 	<meta property="fb:app_id" content="1145054172578219">
 	<meta name="twitter:title" content="Jayant Goel (JayantGoel001)'s Personal Portfolio">
