--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<base href="/">
 	<meta name="theme-color" content="#242a35">
 	<link rel="canonical" href="https://jayantgoel001.github.io/">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta content="width=device-width, initial-scale=1" name="viewport"/>
 	<link rel="manifest" href="manifest.json">
 	<title>Jayant Goel (JayantGoel001)'s Personal Portfolio</title>
 	<meta name="DC.title" content="Jayant Goel (JayantGoel001)'s Personal Portfolio">
