--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta charset="Content-Type: text/html;UTF-8">
 	<base href="/">
 	<meta name="theme-color" content="#242a35">
 	<link rel="canonical" href="https://jayantgoel001.github.io/">
@@ -24,7 +24,7 @@
 	<meta property="og:title" content="Jayant Goel (JayantGoel001)'s Personal Portfolio">
 	<meta property="og:description" content="Jayant Goel (JayantGoel001) - A programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills.">
 	<meta property="og:url" content="https://jayantgoel001.github.io/">
-	<meta property="og:image" content="/assets/images/Profile-pic-512x512.png">
+	<meta property="og:image" content="assets/images/Profile-pic-512x512.png">
 	<meta property="og:type" content="website">
 	<meta property="fb:app_id" content="1145054172578219">
 	<meta name="twitter:title" content="Jayant Goel (JayantGoel001)'s Personal Portfolio">
