--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="Content-Type: text/html;UTF-8">
+	<meta charset="UTF-8">
 	<base href="/">
 	<meta name="theme-color" content="#242a35">
 	<link rel="canonical" href="https://jayantgoel001.github.io/">
