--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
 	<script src="assets/js/wow.min.js"></script>
 	<script src="assets/js/app.min.js"></script>
 	<script src="https://kit.fontawesome.com/25938f5d06.js" crossorigin="anonymous"></script>
-	<script src="//code.tidio.co/xh0yxqw1jnhbpxcmbpgzvyaespk3udyt.js" async></script>
+<!--	<script defer src="//code.tidio.co/xh0yxqw1jnhbpxcmbpgzvyaespk3udyt.js" async></script>-->
 </body>
 
 </html>
