--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,7 @@
 			"@context": "https://schema.org"
 		}
 	</script>
-	<link rel="stylesheet" href="assets/css/animate.min.css">
-	<link rel="stylesheet" href="assets/css/fonts.min.css">
-	<link rel="preload" href="assets/css/girl.min.css" as="style">
+<!--	<link rel="preload" href="assets/css/girl.min.css" as="style">-->
 	<meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho">
 	<script>
 		! function(e, a, t, n, g, c) {
@@ -71,16 +69,6 @@
 
 	<app-root></app-root>
 
-	<script src="assets/data.min.js"></script>
-	<script async defer src="assets/js/girl.min.js"></script>
-	<script src="assets/js/jquery-3.5.1.min.js"></script>
-	<script src="assets/js/bootstrap.bundle.min.js"></script>
-	<script src="assets/js/jquery.easing.min.js"></script>
-	<script src="assets/js/particles.min.js"></script>
-	<script src="assets/js/vanilla-tilt.min.js"></script>
-	<script src="assets/js/dark-light-theme.min.js"></script>
-	<script src="assets/js/wow.min.js"></script>
-	<script src="assets/js/app.min.js"></script>
 	<script src="https://kit.fontawesome.com/25938f5d06.js" crossorigin="anonymous"></script>
 <!--	<script defer src="//code.tidio.co/xh0yxqw1jnhbpxcmbpgzvyaespk3udyt.js" async></script>-->
 </body>
