--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
 
 	<app-root></app-root>
 
-<!--	<script defer src="//code.tidio.co/xh0yxqw1jnhbpxcmbpgzvyaespk3udyt.js" async></script>-->
+	<script defer src="//code.tidio.co/xh0yxqw1jnhbpxcmbpgzvyaespk3udyt.js" async></script>
 </body>
 
 </html>
